<resources>
    <string name="app_name">Charts Finder</string>
    <string name="get_button">Get Charts</string>
    <string name="icao_textview">Enter ICAO Code:</string>
    <string name="icaoedit_hint">Separate with space</string>
    <string name="file_textview">Choose airport:</string>
    <string name="settings_menu">Settings</string>
    <string name="openchart_checkbox">Open chart</string>
    <string name="notfiy_checkbox">Show notifications</string>
    <string name="interior_checkbox">Use internal PDF viewer</string>
    <string name="path_button">Change path</string>
    <string name="res_view">Resources</string>
    <string name="add_button">Add</string>
    <string name="remove_button">Remove</string>
    <string name="reset_button">Reset</string>
    <string name="order_textview">Enter order:</string>
    <string name="url_textview">Enter URL:</string>
    <string name="path_textview">"Path: "</string>
    <string name="cancel_button">Cancel</string>
    <string name="correctorder_message">Please enter a correct order</string>
    <string name="fillin_message">Please fill all fields</string>
    <string name="downcomp_message">%s charts downloaded</string>
    <string name="downfail_message">Can\'t find %s charts</string>
    <string name="writefail_message">Can\'t write %s charts</string>
    <string name="downstart_message">Downloading %s charts…</string>
    <string name="fieldempty_message">Please enter an ICAO code</string>
    <string name="fileexist_message">%s charts already exists</string>
    <string name="downfolder_message">Downloading %s %s chart…</string>
    <string name="restype_textview">Choose type:</string>
    <string name="openpath_title">Choose file explorer:</string>
    <string name="openfile_title">Choose PDF viewer:</string>
    <string name="downcancel_message">Download canceled</string>
    <string name="about_menu">About</string>
    <string name="about_desp">Version: 1.0.3\nBuild date: May 2018\nCheck for updates here: <a href="http://bit.ly/2IVtRIn">http://bit.ly/2IVtRIn</a></string>
    <string name="about_credits">Copyright © Abdullah Radwan\nContact: <a href="mailto:abbodmar@gmail.com?subject=Charts%20Finder">abbodmar@gmail.com</a></string>
    <string name="modifyres_checkbox">Modify resources</string>
    <string name="search_message">Searching for %s charts…</string>
</resources>
